--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ dependencies:
   angular_node_bind: any
   browser: any
   polymer: any
+  shadow_dom: any
 transformers:
 - polymer:
     entry_points: web/angularpolymer.html
