--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,17 @@
 name: angularpolymer
 description: A sample web application
 dependencies:
-  angular: '0.14.0'
+  angular: '1.0.0'
   angular_node_bind: '0.2.0'
   browser: any
-  polymer: '>=0.13.0 <0.14.0'
+  polymer: '>=0.15.0 <0.16.0'
+  paper_elements: '>=0.4.0 <0.5.0'
   shadow_dom: any
 dependency_overrides:
   code_transformers: '>=0.2.0 <0.3.0'
   html5lib: '>=0.12.0 <0.13.0'
+  args: '>=0.11.0 <0.13.0'
+  observe: '>=0.11.0 <0.13.0'
 transformers:
 - angular
 - polymer:
